# har-file-analyzer

./: .dockerignore  .env.coolify  .env.example  .gitignore  Dockerfile  Dockerfile.alternative  Dockerfile.coolify  Dockerfile.simple  README.md  alembic.ini  commit-changes.sh  coolify-docker-compose.yml  coolify-entrypoint.sh  coolify.sh  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  test.har
.specstory/history/: 2025-03-09_15-12-execution-plan-for-har-file-analyzer.md  2025-03-09_20-04-coolify-deployment-error-poetry-configuration-issue.md  2025-03-09_20-04-untitled.md  2025-03-09_20-44-sqlite-database-access-issue-in-fastapi-deployment.md  2025-03-09_20-58-cors-configuration-for-coolify-server.md  2025-03-09_20-58-untitled.md  2025-03-10_12-10-accessing-chatgpt-desktop-app-messages.md
alembic/: env.py
alembic/versions/: 0595a91a375c_initial_migration.py
docs/: excution-plan.md  prd.md
frontend/: .dockerignore  Dockerfile  Dockerfile.coolify  Dockerfile.override  Dockerfile.simple  next.config.js  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: FileUploader.tsx  HARFileList.tsx
scripts/: create_superuser.py
src/: main.py
src/api/: dependencies.py  router.py
src/api/endpoints/: api_calls.py  auth.py  (+1 more)
src/core/: config.py  exceptions.py  security.py
src/db/: base.py  init_db.py  session.py
src/models/: api_call.py  har_file.py  user.py
src/schemas/: api_call.py  har_file.py  user.py
src/services/: api_replayer.py  documentation_generator.py  har_analyzer.py  har_parser.py
